// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Menu renders channel and dm sections with seeded data 1`] = `
"                                                                                                                        
                                                                                                                        
  At a Glance                                                                                                           
                                                                                                                        
      ● 0 Online                                                                                                        
    No users online                                                                                                     
                                                                                                                        
  Public Channels                                                                                                       
                                                                                                                        
    > #global                                                                                                           
      #engineering (2)                                                                                                  
                                                                                                                        
  Private Channels                                                                                                      
                                                                                                                        
      #maintainers (1)                                                                                                  
      + Create a new private channel                                                                                    
                                                                                                                        
  Direct Messages                                                                                                       
                                                                                                                        
      + Start a new conversation                                                                                        
      ● bob (1)                                                                                                         
        Ship it - Jan 2                                                                                                 
      ● charlie                                                                                                         
        LGTM - Jan 1                                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                            <version> | Ctrl+O Logout | Ctrl+C Exit | ↑/↓ scroll           
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
"
`;

exports[`Menu renders empty-state menu 1`] = `
"                                                                                                    
                                                                                                    
  At a Glance                                                                                       
                                                                                                    
      ● 0 Online                                                                                    
    No users online                                                                                 
                                                                                                    
  Private Channels                                                                                  
                                                                                                    
    > + Create a new private channel                                                                
                                                                                                    
  Direct Messages                                                                                   
                                                                                                    
      + Start a new conversation                                                                    
    No Direct Messages Yet.                                                                         
                                                                                                    
  No channels available                                                                             
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                        <version> | Ctrl+O Logout | Ctrl+C Exit | ↑/↓ scroll           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
"
`;
